fixed header spacing and added name

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    height:5rem;
+    height:fit-content;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,15 +12,26 @@ header {
 }
 #logo {
     height: 5rem;
-    padding: 5px;
+}
+
+.logobox {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 2rem;
+}
+
+.logobox > p {
+    color:rgb(164, 130, 238);
+    font-weight:bolder;
+    font-size: larger;
 }
 
 header > div {
     display: flex;
-    height: 5rem;
     width: 15rem;
     justify-content: space-evenly;
     align-items: center;
+    padding-right: 2rem;
 }
 
 a {
